--- a/styles/css/vtex.store-components.css
+++ b/styles/css/vtex.store-components.css
@@ -1,3 +1,38 @@
-.imageElement--cover {
-    object-fit: cover;
-  }
+.container {
+    background: #303030;
+}
+
+.searchBarInnerContainer--searchbar1 {
+    width: 650px;
+}
+
+.searchBarContainer--searchbar2 {
+    width: 100px;
+}
+
+.searchBarContainer :global(.vtex-input-prefix__group) {
+    border: none;
+    border-radius: 0;
+    border-bottom: 2px solid #59ff00;
+}
+
+.searchBarContainer :global(.vtex-styleguide-9-x-input) {
+    background: transparent;
+    color: #fff;
+}
+
+.searchBarIcon--search {
+    color: #59ff00;
+}
+
+.imageElement--imglogin {
+    position: relative;
+    left: -180px;
+    top: 20px;
+}
+
+.imageElement--imgcontato {
+    position: relative;
+    left: -150px;
+    top: 20px;
+}
