--- a/styles/css/vtex.tab-layout.css
+++ b/styles/css/vtex.tab-layout.css
@@ -20,6 +20,10 @@
     background-color: #212121;
 }
 
+.contentContainer {
+  background-color: #303030;
+}
+
   .listItemActive :global(.vtex-button){
     background-color: #212121;
 }
