--- a/styles/css/vtex.search-result.css
+++ b/styles/css/vtex.search-result.css
@@ -7,5 +7,9 @@
 .gallery{
     justify-content: center;
     padding: 0px;
-    margin-left: -70px;
+    margin-left: -60px;
+}
+
+.galleryItem {
+    margin-left: 80px;
 }
